# sleuth-client

./: .flake8  .gitignore  .pylintrc  Makefile  Pipfile  README.md  app.py  app.spec  devbox.json  pyproject.toml  setup.cfg
.github/: release.yml
.github/workflows/: release.yml
sleuth/: cli.py  models.py  service.py
sleuth/commands/: deploy.py  set_health.py  validate.py
