[metadata]
name = sleuth-client
description = Register deploys in Sleuth
author = Don Brown
author_email = don@sleuth.io
maintainer = Don Brown
maintainer_email = don@sleuth.io
long_description = file: README.md
long_description_content_type = text/markdown
license = APLv2 License
url = https://github.com/sleuth-io/sleuth-client
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Programming Language :: Python :: 3.8
keywords =
    sleuth

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    gitpython >= "1"
    requests >= "2.24.0"
    click
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    sleuth = sleuth.cli:main

[options.extras_require]
dev =
    pytest
    flake8
    pylint
    black
    reorder-python-imports
    factory-boy
    mkdocs>=1.1
    mkdocs-macros-plugin
    pyinstaller
test =
    pytest
doc =
    sphinx
    sphinx_rtd_theme
